--- a/Plugins/macOS/_check_detectx/_check_detectx.plist
+++ b/Plugins/macOS/_check_detectx/_check_detectx.plist
@@ -7,7 +7,7 @@
     <key>PluginUUID</key>
     <string>9CC085EE-F23A-4E4D-B78A-52FAF0D8E5D5</string>
     <key>PluginVersion</key>
-    <string>1.1</string>
+    <string>1.2</string>
     <key>PluginOptions</key>
     <array>
       <dict>
@@ -67,7 +67,24 @@
         <key>SettingStoragePath</key>
         <string>/Library/MonitoringClient/PluginSupport/_check_detectx_settings.plist</string>
         <key>SettingTitle</key>
-        <string>Report if scan taking longer than X seconds</string>
+        <string>Consider a scan slow if it takes longer than X seconds</string>
+        <key>SettingTitleHint</key>
+        <string></string>
+        <key>SettingType</key>
+        <dict>
+          <key>Type</key>
+          <string>TextField</string>
+          <key>Value</key>
+          <string></string>
+        </dict>
+      </dict>
+      <dict>
+        <key>SettingStorageKey</key>
+        <string>SlowRunThreshold</string>
+        <key>SettingStoragePath</key>
+        <string>/Library/MonitoringClient/PluginSupport/_check_detectx_settings.plist</string>
+        <key>SettingTitle</key>
+        <string>Report if we have X consective slow scans</string>
         <key>SettingTitleHint</key>
         <string></string>
         <key>SettingType</key>
@@ -79,8 +96,6 @@
         </dict>
       </dict>
     </array>
-  	<key>PluginUUID</key>
-  	<string>FBB8CCBF-400F-4329-A60E-928FCD25D776</string>
     <key>ProgramArguments</key>
     <array>
         <string>/Library/MonitoringClient/Plugins/_check_detectx.plugin</string>
