--- a/Plugins/macOS/_check_timedrift/_check_timedrift.plist
+++ b/Plugins/macOS/_check_timedrift/_check_timedrift.plist
@@ -5,7 +5,9 @@
 	<key>PluginName</key>
 	<string>Time Drift</string>
 	<key>PluginVersion</key>
-	<string>1.4.2</string>
+	<string>1.4.3</string>
+  <key>PluginUUID</key>
+  <string>3AE09BDE-D2D7-4804-9B43-650DE08BA01E</string>
 	<key>PluginOptions</key>
 	<array>
 		<dict>
