--- a/Plugins/macOS/_check_swap/_check_swap.plist
+++ b/Plugins/macOS/_check_swap/_check_swap.plist
@@ -5,7 +5,9 @@
 	<key>PluginName</key>
 	<string>Swap Usage</string>
 	<key>PluginVersion</key>
-	<string>0.3</string>
+	<string>1.0</string>
+  <key>PluginUUID</key>
+  <string>37C0B784-D15C-4DB3-91B7-49C4CC3DD121</string>
 	<key>PluginOptions</key>
 	<array>
 		<dict>
