--- a/Plugins/macOS/_check_munki/_check_munki.plist
+++ b/Plugins/macOS/_check_munki/_check_munki.plist
@@ -3,9 +3,11 @@
 <plist version="1.0">
 <dict>
 	<key>PluginName</key>
-	<string>Munki Status</string>
+	<string>Software Update Status</string>
+  <key>PluginUUID</key>
+  <string>9BA9C14D-AAE7-43BF-8E3A-7B84F1F689A0</string>
 	<key>PluginVersion</key>
-	<string>1.2</string>
+	<string>1.3</string>
 	<key>PluginOptions</key>
 	<array>
 		<dict>
