--- a/Plugins/macOS/_check_third_vantage_b2/_check_third_vantage_b2.plist
+++ b/Plugins/macOS/_check_third_vantage_b2/_check_third_vantage_b2.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>PluginName</key>
-	<string>Third Vantage B2 Check</string>
+	<string>Third Vantage Middleware Check</string>
 	<key>PluginVersion</key>
-	<string>1.3</string>
+	<string>1.3.1</string>
 	<key>PluginOptions</key>
 	<array>
 		<dict>
