--- a/Plugins/macOS/_check_networkmounts/_check_networkmounts.plist
+++ b/Plugins/macOS/_check_networkmounts/_check_networkmounts.plist
@@ -7,7 +7,7 @@
     <key>PluginUUID</key>
     <string>AA6E8E78-6EF3-4CF7-998F-1FD1DDE656B0</string>
     <key>PluginVersion</key>
-    <string>0.2</string>
+    <string>1.0</string>
     <key>PluginOptions</key>
     <array>
       <dict>
@@ -35,7 +35,7 @@
         <key>SettingTitle</key>
         <string>Network mounts to watch</string>
         <key>SettingTitleHint</key>
-        <string>Provide a | delimited string below for mounts we will watch in the format X.X.X.X/Share</string>
+        <string>Provide a | (pipe) delimited string below for mounts we will watch in the format X.X.X.X/Share (SMB/AFP) or X.X.X.X:/Share (NFS)</string>
         <key>SettingType</key>
         <dict>
           <key>Type</key>
