--- a/Plugins/macOS/_check_networkmounts/_check_networkmounts.plist
+++ b/Plugins/macOS/_check_networkmounts/_check_networkmounts.plist
@@ -7,7 +7,7 @@
     <key>PluginUUID</key>
     <string>AA6E8E78-6EF3-4CF7-998F-1FD1DDE656B0</string>
     <key>PluginVersion</key>
-    <string>1.0</string>
+    <string>1.1</string>
     <key>PluginOptions</key>
     <array>
       <dict>
@@ -42,6 +42,23 @@
           <string>TextField</string>
           <key>Value</key>
           <string></string>
+        </dict>
+      </dict>
+      <dict>
+        <key>SettingStorageKey</key>
+        <string>sendRepeatedAlerts</string>
+        <key>SettingStoragePath</key>
+        <string>/Library/MonitoringClient/PluginSupport/_check_networkmounts_settings.plist</string>
+        <key>SettingTitle</key>
+        <string>Send repeated alerts for missing mounts</string>
+        <key>SettingTitleHint</key>
+        <string></string>
+        <key>SettingType</key>
+        <dict>
+          <key>Type</key>
+          <string>Checkbox</string>
+          <key>Value</key>
+          <string>Positive</string>
         </dict>
       </dict>
     </array>
